[gd_scene load_steps=3 format=3 uid="uid://dqvmyatymqdtd"]

[ext_resource type="Script" path="res://src/game_world/objects/game_object.gd" id="1_7qce8"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ufveg"]
resource_local_to_scene = true
size = Vector2(1920, 1080)

[node name="GameObject" type="Node2D"]
script = ExtResource("1_7qce8")

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
shape = SubResource("RectangleShape2D_ufveg")

[connection signal="input_event" from="StaticBody2D" to="." method="_on_static_body_2d_input_event"]
[connection signal="mouse_entered" from="StaticBody2D" to="." method="_on_static_body_2d_mouse_entered"]
[connection signal="mouse_exited" from="StaticBody2D" to="." method="_on_static_body_2d_mouse_exited"]
